Python_scanner_parser/PatitoParser.py
# Generated from Patito.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PatitoParser ( Parser ):

    grammarFileName = "Patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'var'", "'main'", "'end'", 
                     "'if'", "'else'", "'while'", "'do'", "'print'", "'int'", 
                     "'float'", "'void'", "'return'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'>'", "'<'", "'!='", "';'", "','", "':'", 
                     "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "VAR", "MAIN", "END", "IF", 
                      "ELSE", "WHILE", "DO", "PRINT", "INT", "FLOAT", "VOID", 
                      "RETURN", "ASSIGN", "PLUS", "MINUS", "TIMES", "DIV", 
                      "GT", "LT", "NE", "SEMI", "COMMA", "COLON", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "CTE_FLOAT", "CTE_INT", 
                      "STRING", "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_globalVarSection = 1
    RULE_varDecl = 2
    RULE_idList = 3
    RULE_functionSection = 4
    RULE_funcDecl = 5
    RULE_funcVarSection = 6
    RULE_paramList = 7
    RULE_param = 8
    RULE_type = 9
    RULE_block = 10
    RULE_stmt = 11
    RULE_assignStmt = 12
    RULE_ifStmt = 13
    RULE_whileStmt = 14
    RULE_printStmt = 15
    RULE_printArgList = 16
    RULE_funcCallStmt = 17
    RULE_funcCall = 18
    RULE_argList = 19
    RULE_expr = 20
    RULE_relop = 21
    RULE_addExpr = 22
    RULE_multExpr = 23
    RULE_unaryExpr = 24
    RULE_atom = 25
    RULE_returnStmt = 26

    ruleNames =  [ "program", "globalVarSection", "varDecl", "idList", "functionSection", 
                   "funcDecl", "funcVarSection", "paramList", "param", "type", 
                   "block", "stmt", "assignStmt", "ifStmt", "whileStmt", 
                   "printStmt", "printArgList", "funcCallStmt", "funcCall", 
                   "argList", "expr", "relop", "addExpr", "multExpr", "unaryExpr", 
                   "atom", "returnStmt" ]

    EOF = Token.EOF
    PROGRAM=1
    VAR=2
    MAIN=3
    END=4
    IF=5
    ELSE=6
    WHILE=7
    DO=8
    PRINT=9
    INT=10
    FLOAT=11
    VOID=12
    RETURN=13
    ASSIGN=14
    PLUS=15
    MINUS=16
    TIMES=17
    DIV=18
    GT=19
    LT=20
    NE=21
    SEMI=22
    COMMA=23
    COLON=24
    LPAREN=25
    RPAREN=26
    LBRACE=27
    RBRACE=28
    CTE_FLOAT=29
    CTE_INT=30
    STRING=31
    ID=32
    LINE_COMMENT=33
    BLOCK_COMMENT=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(PatitoParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def MAIN(self):
            return self.getToken(PatitoParser.MAIN, 0)

        def block(self):
            return self.getTypedRuleContext(PatitoParser.BlockContext,0)


        def END(self):
            return self.getToken(PatitoParser.END, 0)

        def EOF(self):
            return self.getToken(PatitoParser.EOF, 0)

        def globalVarSection(self):
            return self.getTypedRuleContext(PatitoParser.GlobalVarSectionContext,0)


        def functionSection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.FunctionSectionContext)
            else:
                return self.getTypedRuleContext(PatitoParser.FunctionSectionContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PatitoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(PatitoParser.PROGRAM)
            self.state = 55
            self.match(PatitoParser.ID)
            self.state = 56
            self.match(PatitoParser.SEMI)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 57
                self.globalVarSection()


            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7168) != 0):
                self.state = 60
                self.functionSection()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(PatitoParser.MAIN)
            self.state = 67
            self.block()
            self.state = 68
            self.match(PatitoParser.END)
            self.state = 69
            self.match(PatitoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalVarSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(PatitoParser.VAR, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(PatitoParser.VarDeclContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_globalVarSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalVarSection" ):
                listener.enterGlobalVarSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalVarSection" ):
                listener.exitGlobalVarSection(self)




    def globalVarSection(self):

        localctx = PatitoParser.GlobalVarSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalVarSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(PatitoParser.VAR)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.varDecl()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(PatitoParser.IdListContext,0)


        def COLON(self):
            return self.getToken(PatitoParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(PatitoParser.TypeContext,0)


        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = PatitoParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.idList()
            self.state = 78
            self.match(PatitoParser.COLON)
            self.state = 79
            self.type_()
            self.state = 80
            self.match(PatitoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PatitoParser.ID)
            else:
                return self.getToken(PatitoParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PatitoParser.COMMA)
            else:
                return self.getToken(PatitoParser.COMMA, i)

        def getRuleIndex(self):
            return PatitoParser.RULE_idList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdList" ):
                listener.enterIdList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdList" ):
                listener.exitIdList(self)




    def idList(self):

        localctx = PatitoParser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_idList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(PatitoParser.ID)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 83
                self.match(PatitoParser.COMMA)
                self.state = 84
                self.match(PatitoParser.ID)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDecl(self):
            return self.getTypedRuleContext(PatitoParser.FuncDeclContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_functionSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionSection" ):
                listener.enterFunctionSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionSection" ):
                listener.exitFunctionSection(self)




    def functionSection(self):

        localctx = PatitoParser.FunctionSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.funcDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(PatitoParser.TypeContext,0)


        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PatitoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PatitoParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def paramList(self):
            return self.getTypedRuleContext(PatitoParser.ParamListContext,0)


        def funcVarSection(self):
            return self.getTypedRuleContext(PatitoParser.FuncVarSectionContext,0)


        def block(self):
            return self.getTypedRuleContext(PatitoParser.BlockContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)




    def funcDecl(self):

        localctx = PatitoParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.type_()
            self.state = 93
            self.match(PatitoParser.ID)
            self.state = 94
            self.match(PatitoParser.LPAREN)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 95
                self.paramList()


            self.state = 98
            self.match(PatitoParser.RPAREN)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 99
                self.funcVarSection()


            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 102
                self.block()


            self.state = 105
            self.match(PatitoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncVarSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(PatitoParser.VAR, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(PatitoParser.VarDeclContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_funcVarSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncVarSection" ):
                listener.enterFuncVarSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncVarSection" ):
                listener.exitFuncVarSection(self)




    def funcVarSection(self):

        localctx = PatitoParser.FuncVarSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcVarSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(PatitoParser.VAR)
            self.state = 109 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 108
                self.varDecl()
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.ParamContext)
            else:
                return self.getTypedRuleContext(PatitoParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PatitoParser.COMMA)
            else:
                return self.getToken(PatitoParser.COMMA, i)

        def getRuleIndex(self):
            return PatitoParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = PatitoParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.param()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 114
                self.match(PatitoParser.COMMA)
                self.state = 115
                self.param()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def COLON(self):
            return self.getToken(PatitoParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(PatitoParser.TypeContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = PatitoParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(PatitoParser.ID)
            self.state = 122
            self.match(PatitoParser.COLON)
            self.state = 123
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(PatitoParser.INT, 0)

        def FLOAT(self):
            return self.getToken(PatitoParser.FLOAT, 0)

        def VOID(self):
            return self.getToken(PatitoParser.VOID, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = PatitoParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7168) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PatitoParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PatitoParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.StmtContext)
            else:
                return self.getTypedRuleContext(PatitoParser.StmtContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = PatitoParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(PatitoParser.LBRACE)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4294976160) != 0):
                self.state = 128
                self.stmt()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(PatitoParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStmt(self):
            return self.getTypedRuleContext(PatitoParser.AssignStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(PatitoParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(PatitoParser.WhileStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(PatitoParser.PrintStmtContext,0)


        def funcCallStmt(self):
            return self.getTypedRuleContext(PatitoParser.FuncCallStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(PatitoParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = PatitoParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.assignStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.ifStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.whileStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.printStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.funcCallStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 141
                self.returnStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PatitoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(PatitoParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_assignStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)




    def assignStmt(self):

        localctx = PatitoParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(PatitoParser.ID)
            self.state = 145
            self.match(PatitoParser.ASSIGN)
            self.state = 146
            self.expr(0)
            self.state = 147
            self.match(PatitoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PatitoParser.IF, 0)

        def LPAREN(self):
            return self.getToken(PatitoParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(PatitoParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(PatitoParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.BlockContext)
            else:
                return self.getTypedRuleContext(PatitoParser.BlockContext,i)


        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def ELSE(self):
            return self.getToken(PatitoParser.ELSE, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = PatitoParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(PatitoParser.IF)
            self.state = 150
            self.match(PatitoParser.LPAREN)
            self.state = 151
            self.expr(0)
            self.state = 152
            self.match(PatitoParser.RPAREN)
            self.state = 153
            self.block()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 154
                self.match(PatitoParser.ELSE)
                self.state = 155
                self.block()


            self.state = 158
            self.match(PatitoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PatitoParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(PatitoParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(PatitoParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(PatitoParser.RPAREN, 0)

        def DO(self):
            return self.getToken(PatitoParser.DO, 0)
